# command-quiver

./: .gitignore  CLAUDE.md  LICENSE  README.it.md  README.md  SECURITY.it.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
badges/: test-badge.json
command_quiver/: __init__.py  app.py  main.py  tray_helper.py
command_quiver/assets/: com.github.commandquiver.desktop
command_quiver/core/: clipboard.py  executor.py  i18n.py  settings.py
command_quiver/db/: database.py  models.py  queries.py
command_quiver/ui/: entry_editor.py  entry_list.py  section_manager.py  section_panel.py  sidebar.py  styles.py
doc_progetto/: prompt-vault-specs.md
scripts/: generate_icon.py  install-desktop.sh
tests/: conftest.py  test_app.py  test_main.py  test_tray_helper.py
tests/core/: test_clipboard.py  test_executor.py  test_i18n.py  test_settings.py
tests/db/: test_database.py  test_queries.py
tests/ui/: test_entry_editor.py  test_entry_list.py  test_section_manager.py  test_section_panel.py  test_sidebar.py
